# multicaptioneval

./: README.md  pyproject.toml
example/: example.py  example_en.py
src/multicaptioneval/: eval.py
src/multicaptioneval/metrics/bleu/: bleu.py  bleu_scorer.py  data.py
src/multicaptioneval/metrics/cider/: cider.py  cider_scorer.py  data.py
src/multicaptioneval/processing/: __init__.py  normalization.py  pipeline.py  tokenizer_base.py  tokenizer_ja.py  tokenizer_ko.py  tokenizer_ptb.py  tokenizer_th.py  tokenizer_zh.py
tests/: conftest.py  test_evaluation.py  test_metrics.py
tests/fixtures/: ar_captions_val2014.json  ar_captions_val2014_fakecap_results.json  el_captions_val2014.json  el_captions_val2014_fakecap_results.json  en_captions_val2014.json  en_captions_val2014_references_after_tokenization.json  en_captions_val2014_results_after_tokenization.json  fr_captions_val2014.json  fr_captions_val2014_fakecap_results.json  ja_captions_val2014.json  ja_captions_val2014_fakecap_results.json  ko_captions_val2014.json  ko_captions_val2014_fakecap_results.json  th_captions_val2014.json  th_captions_val2014_fakecap_results.json  zh_captions_val2014.json  zh_captions_val2014_fakecap_results.json
